--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-express-api",
+  "name": "screenshot-api",
   "description": "Simple api sample in Node",
   "version": "1.0.0",
   "private": true,
